[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/containers/Placeholder_16-9_cuatro.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/containers/Placeholder_16-9_tres.png" type="Texture" id=3]
[ext_resource path="res://minigames/UI_Reusable/iconBadge.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/Interfaces/profileMenu/BadgeObtained.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/moneda.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 900 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1600, 900 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1600, 900 )

[sub_resource type="DynamicFont" id=8]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "animationIntro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2500, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 432, 27 ), Vector2( 432, 0 ), Vector2( 432, 27 ), Vector2( 405, 27 ), Vector2( 432, 27 ), Vector2( 459, 27 ) ]
}

[node name="BadgeObtained" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -501.0
margin_top = -513.0
margin_right = 555.0
margin_bottom = 513.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="Panel"]
anchor_left = 0.508
anchor_top = 0.161
anchor_right = 0.508
anchor_bottom = 0.161
margin_left = -368.448
margin_top = -104.186
margin_right = 363.552
margin_bottom = 15.814
custom_fonts/font = SubResource( 2 )
text = "¡ Misión completada !"
align = 1
valign = 1

[node name="message2" type="Label" parent="Panel"]
anchor_left = 0.508
anchor_top = 0.161
anchor_right = 0.508
anchor_bottom = 0.161
margin_left = -376.448
margin_top = 63.814
margin_right = 403.552
margin_bottom = 183.814
custom_fonts/font = SubResource( 2 )
text = "Recompensas obtenidas:"
align = 1
valign = 1

[node name="rewards" type="HBoxContainer" parent="Panel"]
anchor_right = 0.114
anchor_bottom = 0.106
margin_left = 88.0
margin_top = 357.0
margin_right = 855.616
margin_bottom = 824.244
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonedaPlata" type="Panel" parent="Panel/rewards"]
margin_right = 442.0
margin_bottom = 576.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Panel/rewards/MonedaPlata"]
position = Vector2( 229, 232 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Panel/rewards/MonedaPlata/Sprite"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.391
margin_top = -83.9131
margin_right = 17.6087
margin_bottom = -44.9131
custom_fonts/font = SubResource( 5 )
text = "Moneda de plata"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MedallaNivel" type="Panel" parent="Panel/rewards"]
margin_left = 446.0
margin_right = 888.0
margin_bottom = 576.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )

[node name="iconBadge" parent="Panel/rewards/MedallaNivel" instance=ExtResource( 4 )]
anchor_left = 0.511
anchor_top = 0.528
anchor_right = 0.511
anchor_bottom = 0.528
margin_left = -239.862
margin_top = -200.128
margin_right = -39.862
margin_bottom = -87.628
rect_scale = Vector2( 2.5, 2.5 )

[node name="Label" type="Label" parent="Panel/rewards/MedallaNivel/iconBadge"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.8
margin_top = 62.15
margin_right = 64.2
margin_bottom = 88.15
custom_fonts/font = SubResource( 8 )
text = "Medalla de minijuego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animationIntro = SubResource( 7 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
